--- a/src/components/todo-list/todo-list.css
+++ b/src/components/todo-list/todo-list.css
@@ -3,3 +3,24 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
 }
+
+.todo_input_wrapper {
+  display: flex;
+  border: 1px solid #ccc;
+}
+
+.todo_input_wrapper input {
+  height: 2.5rem;
+  flex: 1;
+  border: 1px solid #ccc;
+  border-right: none;
+  padding: 0.5rem;
+}
+
+.todo_input_wrapper button {
+  border: 1px solid #ccc;
+  outline: none;
+  min-width: 5rem;
+  background-color: rgb(0, 204, 136);
+  color: #fff;
+}
