--- a/src/components/todo-wrapper/todo-wrapper.css
+++ b/src/components/todo-wrapper/todo-wrapper.css
@@ -1,6 +1,5 @@
 .todo_wrapper {
   display: flex;
-  align-items: center;
   justify-content: start;
   flex-direction: column;
   border: 1px solid #ccc;
@@ -13,6 +12,7 @@
 
 .title {
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .todo_container {
