--- a/src/components/todo-wrapper/todo-wrapper.css
+++ b/src/components/todo-wrapper/todo-wrapper.css
@@ -19,3 +19,10 @@
   display: grid;
   gap: 1rem;
 }
+
+.todo_item_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
